// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details components CollapseIcon renders correctly 1`] = `
<svg
  aria-hidden="true"
  className="details-collapse-icon "
  viewBox="0 0 320 512"
>
  <path
    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
    fill="currentColor"
  />
</svg>
`;

exports[`Details components Details applies custom className 1`] = `
<details
  className="custom-class"
>
  <summary
    className="details-summary"
  >
    Test
  </summary>
</details>
`;

exports[`Details components Details renders correctly with children 1`] = `
<details>
  <summary
    className="details-summary"
  >
    Click to expand
  </summary>
  <p>
    Hidden content
  </p>
</details>
`;

exports[`Details components ExpandIcon renders correctly 1`] = `
<svg
  aria-hidden="true"
  className="details-expand-icon "
  viewBox="0 0 256 512"
>
  <path
    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
    fill="currentColor"
  />
</svg>
`;

exports[`Details components Summary renders correctly with children 1`] = `
<summary
  className="details-summary"
>
  Click to expand
</summary>
`;
